# rust-opengl-test

./: Cargo.toml  readme.md
assets/shaders/: triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: debug.rs  main.rs  render_gl.rs  resources.rs  triangle.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  mod.rs  shader.rs  viewport.rs
