[package]
name = "rust-opengl-test"
version = "0.1.0"
authors = ["Kalvin Pearce <kalvinpearce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }

[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]