[package]
name = "rust-opengl-test"
version = "0.1.0"
authors = ["Kalvin Pearce <kalvinpearce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.8"

[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]

[build-dependencies]
walkdir = "2.3.1"

[features]
gl_debug = ["gl/debug"]